2007-02-26  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Add mention of "set multiplot title <page-title>".

	* src/term_api.h term/aquaterm.c term/gd.trm term/pdf.trm:  Remove cruft
	(enhanced_max_height, enhanced_min_height) used only be PostScript but
	exported to everyone.
	
	* term/estimate.trm: Keep track in local variables instead, and return
	the net height in term->ymax.  It was supposed to do this already.
	Now it really is.

2007-02-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c (draw_color_smooth_box) src/plot3d.c (eval_3dplots):
	Call setup_tics(COLOR_AXIS, 20) at the same place as setup_tics(...)
	for all other axes. Until now it was called much later during color box
	drawing where it could change the colour axis min or max by rounding it
	to lower/upper tics step.

2007-02-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.h src/datafile.c (df_reset_after_error)
	src/util.c (int_error): The routines in datafile.c use local variables
	to track the context of expression evaluation; e.g. expressions may
	only reference data column values inside a `using` statement. But the
	state of these context variables is corrupted if an error exit bails
	directly to the command line, thus bypassing the normal execution path.
	Therefore we provide a routine df_reset_after_error() to be called
	from int_error(). FIXME: Similar error_reset routines may be needed
	by other modules.

	* src/eval.c docs/gnuplot.doc: Allow "strcol(foo)" as shorthand form
	of "stringcolumn(foo)".

	* src/unset.c (unset_style) src/set.c (set_nolinestyle):
	Add missing command "unset style line <n>".

2007-02-22  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* term/latex.trm (LATEX_fillbox): Add support for solid-fill boxes.
	EAM: style parameter accepted, but density and fill patterns are limited
	to solid white or solid black.

2007-02-22  sobukus@users.sourceforge.net

	* m4/apha.m4: Fix syntax of test for gcc on alpha
